tests/bad/int1.pas
program int;

var
begin

end.
